--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,3 +1,14 @@
+@use "./partials/setup";
+@use "./partials/variables" as *;
+@use "./partials/typography";
+@use "./partials/baseStyles";
+@use "./partials/nav";
+@use "./partials/header";
+@use "./partials/sections";
+@use "./partials/footer";
+@use "./partials/mediaQueries";
+
+
 // COLOURS:
 // primary text (blue): #084b6d;
 // secondary (light blue): #f4fcff;
