--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -3,6 +3,7 @@
 @use "./partials/typography";
 @use "./partials/baseStyles";
 @use "./partials/nav";
+@use "./partials/modal";
 @use "./partials/header";
 @use "./partials/sections";
 @use "./partials/footer";
